mongos can use invalid ptr to master conn when setShardVersion fails

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.2.1, 2.3.0
    • Affects Version/s: 2.2.0
    • Component/s: None
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Mongos can crash if an error occurs with a replica set while trying to set the shard version - because checkShardVersion uses the legacy masterConn() call, it retains a pointer to the now-invalid connection.

      Potential fix is to retry not with the same connection but with the replica set connection object.

            Assignee:
            Randolph Tan
            Reporter:
            Greg Studer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: