SERVER-7061 mongos can use invalid ptr to master conn when setShardVersion fails